# docs/swagger.json
@@ -17,6 +17,86 @@
     },
     "host": "localhost:8888",
     "paths": {
+        "/user/v1/info": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "get user information",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "GetUserInfo"
+                ],
+                "summary": "get user information",
+                "responses": {}
+            }
+        },
+        "/user/v1/login": {
+            "post": {
+                "description": "login user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Login"
+                ],
+                "summary": "login user",
+                "parameters": [
+                    {
+                        "description": "body params",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/restapi.LoginRequest"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/user/v1/refresh-token": {
+            "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "refresh expired token",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "RefreshToken"
+                ],
+                "summary": "refresh expired token",
+                "parameters": [
+                    {
+                        "description": "body params",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/restapi.RefreshTokenRequest"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/user/v1/register": {
             "post": {
                 "description": "register new user",
@@ -27,7 +107,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "RegisterUser"
+                    "Register"
                 ],
                 "summary": "register new user",
                 "parameters": [
@@ -46,6 +126,36 @@
         }
     },
     "definitions": {
+        "restapi.LoginRequest": {
+            "type": "object",
+            "required": [
+                "email",
+                "password"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "restapi.RefreshTokenRequest": {
+            "type": "object",
+            "required": [
+                "csrf_secret",
+                "refresh_token"
+            ],
+            "properties": {
+                "csrf_secret": {
+                    "type": "string"
+                },
+                "refresh_token": {
+                    "type": "string"
+                }
+            }
+        },
         "restapi.RegisterRequest": {
             "type": "object",
             "required": [
@@ -68,6 +178,14 @@
                     "minLength": 5
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "Bearer": {
+            "description": "Type \"Bearer\" followed by a space and JWT token.",
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     },
     "externalDocs": {
