# internal/user/service/dto.go
@@ -1,0 +1,13 @@
+package service
+
+type LoginDTO struct {
+	Email, Password string
+}
+
+type RegisterDTO struct {
+	FirstName, LastName, Email, Password string
+}
+
+type GetUserDTO struct {
+	UserID string
+}
